# sientia-log-library

./: .gitignore  .pypirc  404.html  LICENCE  README.md  basic.html  basic_tracker.ipynb  exemple.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  regression.html  regression_tracker.html  regression_tracker.ipynb  requirements.txt  setup.py  simple.html  simple_tracker.html  sonar-project.properties
.github/workflows/: ci.yml  quality-gate.yml
docs/: basic.md  exemple.ipynb  index.md  regression.md  regression_tracker.ipynb  simple.md  simple_tracker.ipynb
mlruns/0/: meta.yaml
sientia_log/: basic.py  regression.py
sientia_tracker/: basic.py  regression.py  regression_tracker.py  simple_tracker.py  tracker.py
sientia_tracker.egg-info/: PKG-INFO
sientia_tracker/logs/: base_tracker.py  regression_tracker.py  simple_tracker.py
sientia_tracker/model_serving/: experiment_tracker.py  loger.py  model_serving.py  model_tracker.py  retriever.py  run_tracker.py
site/: basic.html  index.html  objects.inv  regression.html  regression_tracker.html  simple.html  simple_tracker.html
temp_docs/: basic.html  exemple.html  index.html  objects.inv  regression.html  simple.html  simple_tracker.html
tests/: test_base_tracker.py
