[tool.poetry]
name = "sientia-log-library"
version = "0.1.0"
description = "SIENTIA Log Library"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "2.10.1"
typing = "*"

[tool.poetry.group.dev.dependencies]
mkdocs = "*"
mkdocstrings = "*"
mkdocstrings-python = "*"
mkdocs-jupyter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
